[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = ""
authors = ["Igor Borges <igor@borges.dev>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
homeassistant = "2024.1.3"
aiohttp = "^3.9.1"
openai = "^1.8.0"
langchain = "^0.0.351"
langchain-experimental = "^0.0.47"
langchain-openai = "^0.0.2.post1"
yfinance = "0.2.31"
google-api-python-client = "^2.105.0"
google-auth-oauthlib = "^1.2.0"
tmdbv3api = "^1.9.0"
wikipedia = "^1.4.0"
matrix-nio = {extras = ["e2e"], version = "^0.24.0"}
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.23.0"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
matrix-commander = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
